<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/beers" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        android:text="@string/welcome_line"/>

    <Button
        android:id="@+id/addBeers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findBreweries"
        android:text="@string/continue_next"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/find_breweries"
        android:id="@+id/findBreweries"/>
</RelativeLayout>